# dataspoc-lens

./: .dockerignore  .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RULES.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: howto-explore-with-ai.md  howto-query-s3-lake.md
docs/usage/: lens-guia-pt-br.md  lens-guide-en.md
examples/: mcp_config.json  sdk_usage.py
src/dataspoc_lens/: __init__.py  __main__.py  ai.py  cache.py  catalog.py  cli.py  config.py  connect.py  export.py  mcp_server.py  notebook.py  sdk.py  shell.py  transforms.py
tests/: test_ai.py  test_cache.py  test_catalog.py  test_cli.py  test_export.py  test_shell.py  test_transforms.py
